--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "rimraf": "^3.0.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
