--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "rimraf": "./node_modules/rimraf/bin.js",
     "debug": "npm run build && node $NODE_DEBUG_OPTION dist/index.js",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/index.js"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
